kafka using in-memory DB, but thought to change it bcoz data is not persistant